force-app/main/default/objects/WSM_Assignment_Log__c/WSM_Assignment_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail of every assignment attempt (assigned, fallback, no-eligible-members, or error). Also the computed-on-read source for period capacity and Least Assigned counts, no reset jobs, no drift.</description>
    <label>Assignment Log</label>
    <nameField>
        <displayFormat>RRA-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>