force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>WSM_Algorithm__c</fullName>
    <description>Name of the algorithm used for this decision, captured at run time for audit purposes.</description>
    <inlineHelpText>Algorithm in effect when this decision was made.</inlineHelpText>
    <label>Algorithm</label>
    <length>40</length>
    <type>Text</type>
</CustomField>