force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Assigned_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>WSM_Assigned_Record_Id__c</fullName>
    <description>Id of the record this assignment was made for (e.g. the Lead or Case routed by the caller flow).</description>
    <inlineHelpText>The record Id that was routed by this assignment.</inlineHelpText>
    <label>Assigned Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>