force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>WSM_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user the record was ultimately routed to — the member's user, or the group's fallback user.</description>
    <inlineHelpText>Final assignee for this routing decision.</inlineHelpText>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assignment Logs (Assigned)</relationshipLabel>
    <relationshipName>Assignment_Logs_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>