force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Context__c.field-meta.xml
<CustomField>
    <fullName>WSM_Context__c</fullName>
    <description>Caller-supplied label identifying which flow or process triggered this assignment, for troubleshooting.</description>
    <inlineHelpText>Free-text label from the calling flow/process, for troubleshooting.</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>