force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Detail__c.field-meta.xml
<CustomField>
    <fullName>WSM_Detail__c</fullName>
    <description>Skip-reason summary or error detail for this attempt — why members were ineligible, or what went wrong.</description>
    <inlineHelpText>Why members were skipped, or error detail if this attempt failed.</inlineHelpText>
    <label>Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>