force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Group__c.field-meta.xml
<CustomField>
    <fullName>WSM_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group this assignment was made for. Kept as a Lookup rather than Master-Detail so log history survives group deletion.</description>
    <inlineHelpText>Group this assignment result belongs to.</inlineHelpText>
    <label>Group</label>
    <referenceTo>WSM_Round_Robin_Group__c</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>