force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Member__c.field-meta.xml
<CustomField>
    <fullName>WSM_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The member seat that was selected. Blank for Fallback, No Eligible Members, or Error outcomes.</description>
    <inlineHelpText>Member selected for this assignment. Blank on fallback/no-eligible/error rows.</inlineHelpText>
    <label>Member</label>
    <referenceTo>WSM_Round_Robin_Member__c</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>