force-app/main/default/objects/WSM_Assignment_Log__c/fields/WSM_Status__c.field-meta.xml
<CustomField>
    <fullName>WSM_Status__c</fullName>
    <description>Outcome of this assignment attempt. Only Assigned rows count toward capacity and Least Assigned fairness math.</description>
    <inlineHelpText>Result of the routing attempt. Only Assigned rows count toward caps and Least Assigned.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <default>true</default>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Fallback</fullName>
            </value>
            <value>
                <fullName>No Eligible Members</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>