force-app/main/default/objects/WSM_Assignment_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WSM_Group__c</columns>
    <columns>WSM_Assigned_User__c</columns>
    <columns>WSM_Status__c</columns>
    <columns>WSM_Algorithm__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>